[gd_scene load_steps=14 format=3 uid="uid://b8pweoiukjb0u"]

[ext_resource type="Theme" uid="uid://u4unsqyy6047" path="res://Assets/Arts/Gui/gui_them.tres" id="1_274i0"]
[ext_resource type="Shader" path="res://Shaders/pause_menu.gdshader" id="2_l10h0"]
[ext_resource type="Texture2D" uid="uid://dx5ems6t3ms0p" path="res://Assets/Arts/Gui/crt screens/button crt/button 1 crt sprite.png" id="2_u05gq"]
[ext_resource type="Script" path="res://Scripts/GUI/settings_menu.gd" id="2_v7aih"]
[ext_resource type="Texture2D" uid="uid://pgjb0rj1u4fx" path="res://Assets/Arts/Gui/Text ScreenPads/bg_for_scalable_screen.png" id="3_7yjpd"]
[ext_resource type="Shader" path="res://Shaders/main_menu_background.gdshader" id="5_hskq5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntv83"]
shader = ExtResource("2_l10h0")
shader_parameter/amount = 1.471

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dm4i0"]
shader = ExtResource("5_hskq5")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 6.0
shader_parameter/shine_size = 0.003

[sub_resource type="AtlasTexture" id="AtlasTexture_vlma0"]
atlas = ExtResource("2_u05gq")
region = Rect2(0, 0, 85, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ed52"]
atlas = ExtResource("2_u05gq")
region = Rect2(85, 0, 85, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6g5l"]
atlas = ExtResource("2_u05gq")
region = Rect2(170, 0, 85, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb6bw"]
atlas = ExtResource("2_u05gq")
region = Rect2(255, 0, 85, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sf3ut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlma0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ed52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6g5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb6bw")
}],
"loop": true,
"name": &"Glitch",
"speed": 5.0
}]

[node name="SettingsTab" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 1158.0
offset_bottom = 648.0
theme = ExtResource("1_274i0")
script = ExtResource("2_v7aih")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_ntv83")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = 1.0
offset_right = -1137.0
offset_bottom = -609.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29.6821, 17.0937)

[node name="ColorRect3" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 299.0
offset_right = -830.0
offset_bottom = -610.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29.6821, 17.0937)
color = Color(0, 0, 0, 0.615686)

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7yjpd")

[node name="Quit" type="Button" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_dm4i0")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -539.0
offset_top = -117.0
offset_right = -130.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.00265048
scale = Vector2(0.531, 0.233)
tooltip_text = "This is quit"
text = "BACK"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Quit"]
modulate = Color(1, 1, 1, 0.678431)
z_index = 10
position = Vector2(204.285, 124.226)
scale = Vector2(4.79, 14.047)
sprite_frames = SubResource("SpriteFrames_sf3ut")
animation = &"Glitch"

[node name="ChromaticAberrationCheckbox" type="CheckBox" parent="."]
z_index = 10
layout_mode = 0
offset_left = 983.0
offset_top = 459.0
offset_right = 1097.0
offset_bottom = 508.0

[node name="Label" type="Label" parent="ChromaticAberrationCheckbox"]
layout_mode = 0
offset_left = -608.0
offset_right = -38.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 24
text = "Toggle chromatic aberration"

[node name="MasterScrollbar" type="HScrollBar" parent="."]
z_index = 10
layout_mode = 0
offset_left = 375.0
offset_top = 120.0
offset_right = 1054.0
offset_bottom = 140.0
min_value = -36.0
max_value = -6.0
value = -12.0

[node name="Label" type="Label" parent="MasterScrollbar"]
layout_mode = 0
offset_top = -64.0
offset_right = 608.0
offset_bottom = -15.0
theme_override_font_sizes/font_size = 24
text = "Master volume"

[node name="MusicScrollbar" type="HScrollBar" parent="."]
z_index = 10
layout_mode = 0
offset_left = 375.0
offset_top = 252.0
offset_right = 1054.0
offset_bottom = 272.0
min_value = -36.0
max_value = -12.0
value = -12.0

[node name="Label" type="Label" parent="MusicScrollbar"]
layout_mode = 0
offset_top = -62.0
offset_right = 679.0
offset_bottom = -13.0
theme_override_font_sizes/font_size = 24
text = "Music volume"

[node name="SoundScrollbar" type="HScrollBar" parent="."]
z_index = 10
layout_mode = 0
offset_left = 375.0
offset_top = 374.0
offset_right = 1054.0
offset_bottom = 394.0
min_value = -36.0
max_value = -6.0
value = -6.0

[node name="Label" type="Label" parent="SoundScrollbar"]
layout_mode = 0
offset_top = -61.0
offset_right = 178.0
offset_bottom = -12.0
theme_override_font_sizes/font_size = 24
text = "SFX volume"

[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="ChromaticAberrationCheckbox" to="." method="_on_chromatic_aberration_checkbox_toggled"]
[connection signal="mouse_exited" from="MasterScrollbar" to="." method="_on_master_scrollbar_mouse_exited"]
[connection signal="value_changed" from="MasterScrollbar" to="." method="_on_master_scrollbar_value_changed"]
[connection signal="mouse_exited" from="MusicScrollbar" to="." method="_on_music_scrollbar_mouse_exited"]
[connection signal="value_changed" from="MusicScrollbar" to="." method="_on_music_scrollbar_value_changed"]
[connection signal="mouse_exited" from="SoundScrollbar" to="." method="_on_sound_scrollbar_mouse_exited"]
[connection signal="value_changed" from="SoundScrollbar" to="." method="_on_sound_scrollbar_value_changed"]
